<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) Rizwan Choudrey 2016 - All Rights Reserved
  ~ Unauthorized copying of this file via any medium is strictly prohibited
  ~ Proprietary and confidential
  ~ rizwan.choudrey@gmail.com
  ~
  -->

<resources>

    <!-- App level -->
    <string name="app_name">Reviewer</string>
    <string name="search_hint">Search</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="view">View</string>

    <!-- Line -->
    <string name="line_or">or</string>

    <!-- Alerts -->
    <string name="alert_set_image_as_background">Set image as cover?</string>
    <string name="alert_set_comment_as_headline">Set comment as headline?</string>
    <string name="alert_edit_on_map">Edit on map?</string>
    <string name="alert_add_on_map">Add using map?</string>
    <string name="alert_edit_on_browser">Edit on browser?</string>
    <string name="alert_add_on_browser">Add link using browser?</string>
    <string name="alert_delete_review">Delete published review?</string>
    <string name="alert_goto_review">Go to review?</string>

    <!-- Dialogs -->
    <string name="dialog_url_title">Link</string>
    <string name="dialog_image_content_description">Review image</string>
    <string name="dialog_location_no_suggestions">No suggestions found&#8230;</string>

    <!-- Activities & Screens -->
    <string name="activity_title_location">location</string>
    <string name="activity_title_url">link</string>
    <string name="activity_title_feed">feed</string>
    <string name="activity_title_build_review">create</string>
    <string name="activity_title_share">share</string>
    <string name="activity_title_login">login</string>
    <string name="activity_title_sign_up">sign up</string>

    <!-- EditTexts -->
    <string name="edit_text_subject_hint">subject</string>
    <string name="edit_text_add_criterion_hint">criterion name&#8230;</string>
    <string name="edit_text_add_comment_hint">comment&#8230;</string>
    <string name="edit_text_name_location_hint">name this location&#8230;</string>
    <string name="edit_text_fetching_location_hint">fetching location&#8230;</string>
    <string name="edit_text_searching_near_here">searching near here&#8230;</string>
    <string name="edit_text_searching_near_image">searching near image&#8230;</string>
    <string name="edit_text_add_a_location">name current or select another&#8230;</string>
    <string name="edit_text_edit_a_location">location name&#8230;</string>
    <string name="edit_text_name_image_location_hint">name image location&#8230;</string>
    <string name="edit_text_no_suggestions">no suggestions found&#8230;</string>
    <string name="edit_text_image_caption_hint">caption&#8230;</string>
    <string name="edit_text_fact_name_hint">label (e.g. \'price\', \'director\' etc. )&#8230;</string>
    <string name="edit_text_fact_value_hint">value&#8230;</string>
    <string name="edit_text_url_hint">link&#8230;</string>
    <string name="edit_text_url_text">http://</string>
    <string name="edit_text_tag_hint">tag&#8230;</string>
    <string name="edit_text_email">email</string>
    <string name="edit_text_password">password</string>
    <string name="edit_text_confirm_password">confirm password</string>
    <string name="edit_text_author_name">choose author name</string>

    <!-- SearchViews -->
    <string name="search_view_location_hint">search for location&#8230;</string>

    <!-- ProgressDialogs -->
    <string name="progress_bar_search_location_title">searching&#8230;</string>
    <string name="progress_bar_search_location_message">please wait&#8230;</string>
    <string name="progress_bar_fetching_location_title">fetching location&#8230;</string>
    <string name="progress_bar_fetching_location_message">please wait&#8230;</string>

    <!-- Buttons -->
    <string name="button_browse">WWW</string>
    <string name="button_map">Map</string>
    <string name="button_add_review_data">Details</string>
    <string name="button_share">Share</string>
    <string name="button_publish">Publish</string>
    <string name="button_social">Social</string>
    <string name="button_add">Add</string>
    <string name="button_done">Done</string>
    <string name="button_goto_review">Review</string>
    <string name="button_goto_google_maps">GMaps</string>
    <string name="button_another_review">Another like this</string>
    <string name="button_delete">Delete</string>
    <string name="button_login_email">Log in</string>
    <string name="button_login_google">Log in with Google</string>
    <string name="button_login_facebook">Log in with Facebook</string>
    <string name="button_login_twitter">Log in with Twitter</string>

    <!-- Image Buttons -->
    <string name="button_revert_location_cd">revert location</string>

    <!-- Image Views -->
    <string name="image_review_cd">review image</string>

    <!-- Menus -->
    <string name="menu_options">options</string>
    <string name="menu_search">search</string>
    <string name="menu_average_rating">average rating</string>
    <string name="menu_new_review">new review</string>
    <string name="menu_settings">settings</string>
    <string name="menu_logout">log out</string>

    <!-- Toasts -->
    <string name="toast_enter_subject">Please enter a subject&#8230;</string>
    <string name="toast_has">You\'ve already added this</string>
    <string name="toast_split_comment">Showing sentences&#8230;</string>
    <string name="toast_unsplit_comment">Showing headlines&#8230;</string>
    <string name="toast_bad_url">Link does not make sense&#8230;</string>
    <string name="toast_map_search_failed">Couldn\'t find location&#8230;</string>
    <string name="toast_enter_tag">Please enter at least one tag to help categorise it&#8230;</string>
    <string name="toast_enter_location">Please enter a location name&#8230;</string>
    <string name="publishing">Publishing&#8230;</string>
    <string name="problem_publishing">Problem publishing</string>

    <!-- Social -->
    <string name="facebook">facebook</string>
    <string name="twitter">twitter</string>
    <string name="email">email</string>
    <string name="tumblr">tumblr</string>
    <string name="foursquare">foursquare</string>
    <string name="whatsapp">whatsapp</string>

    <!-- URLs -->
    <string name="google_search">http://www.google.com</string>

    <!-- Service messages -->
    <string name="review_uploaded">uploaded</string>
    <string name="review_deleted">deleted</string>
    <string name="upload_error">upload error</string>
    <string name="delete_error">delete error</string>
    <string name="review_published">published</string>
    <string name="publishing_error">publishing error</string>

    <!-- Keys -->
    <string name="key_google_maps">AIzaSyCZ_ArQmEClJYtDtvbcbSQQbvUcCZf3KWg</string>
    <string name="key_google_api">AIzaSyAijd_EYrICD78hz3NlE03sWlyG26cjvEc</string>
    <string name="google_client_id">333308281121-einfbtdarlq1053len5ssu8si28911k0.apps.googleusercontent.com</string>
    <string name="consumer_key_twitter">S1cZ1sRDt4pbUP49MCduMt0IQ</string>
    <string name="consumer_secret_twitter">mUhFe14zIdh1E3wg9kPrad2hsk6rHHlquZ2eFXjK1p5I3EmqsX</string>
    <string name="consumer_key_tumblr">5DQowY8DHyhvKycydG2bJc6RytQ6OjSzgFB0XvzjB9rKTVkgx5</string>
    <string name="consumer_secret_tumblr">YPX5LE3T7XujtGg6kCpPnyXtPUUF8TYfRCqBnwMHZrs78rtFwR</string>
    <string name="consumer_key_4square">PKIX2W00YPV0F02QBTEV0V3MUDTKUDFV1RTVW3LKRFHIHS2V</string>
    <string name="consumer_secret_4square">AUIB1SGHZMCNHWGLI1JCL3XTZJ0U5J0UYWJLMM1VLVBFWDUE</string>
    <string name="facebook_app_id">1671165596505199</string>
    <string name="consumer_key_facebook">e19654d535b42693fbcb6fa45628c653</string>
    <string name="consumer_secret_facebook">3c4f4f17a09bcc16cf49674facc56fb0</string>
    <string name="callback">http://oauth.callback.url</string>

</resources>