<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) Rizwan Choudrey 2016 - All Rights Reserved
  ~ Unauthorized copying of this file via any medium is strictly prohibited
  ~ Proprietary and confidential
  ~ rizwan.choudrey@gmail.com
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:icon="@drawable/perm_group_app_info"
        android:showAsAction="always|withText"
        android:title="@string/menu_settings">
        <menu>
            <item
                android:id="@+id/menu_item_settings_logout"
                android:title="@string/menu_logout"/>
        </menu>
    </item>

    <item
        android:id="@+id/menu_item_new_review"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="always|withText"
        android:title="@string/menu_new_review"/>

</menu>