<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Rizwan Choudrey 2016 - All Rights Reserved
  ~ Unauthorized copying of this file via any medium is strictly prohibited
  ~ Proprietary and confidential
  ~ rizwan.choudrey@gmail.com
  ~
  -->

<LinearLayout
    style="@style/LineaLayoutVertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/email_sign_up"
        style="@style/LineaLayoutVertical.WrappedVertical"
        android:layout_gravity="top">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text_sign_up_email"
            android:inputType="textEmailAddress"
            android:layout_gravity="center"
            android:hint="@string/edit_text_email"
            android:imeOptions="actionNext"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/edit_text_sign_up_password"
            android:hint="@string/edit_text_password"
            android:imeOptions="actionNext"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/edit_text_confirm_password"
            android:hint="@string/edit_text_confirm_password"
            android:imeOptions="actionNext"/>
    </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_gravity="center"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_0123456789"
            android:id="@+id/edit_text_author_name"
            android:hint="@string/edit_text_author_name"/>

        <Button
            android:id="@+id/sign_up_button"
            style="@style/LoginButton"
            android:layout_gravity="bottom"
            android:text="@string/button_done"/>

</LinearLayout>


