<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Rizwan Choudrey 2016 - All Rights Reserved
  ~ Unauthorized copying of this file via any medium is strictly prohibited
  ~ Proprietary and confidential
  ~ rizwan.choudrey@gmail.com
  ~
  -->

<LinearLayout
    style="@style/LinearLayoutVertical.WrappedVertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center">

    <EditText
        android:id="@+id/edit_text_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/edit_text_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/edit_text_login_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_password_confirm"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login_button_email"
        style="@style/LoginButton"
        android:text="@string/button_login_email"/>

</LinearLayout>