<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Rizwan Choudrey 2016 - All Rights Reserved
  ~ Unauthorized copying of this file via any medium is strictly prohibited
  ~ Proprietary and confidential
  ~ rizwan.choudrey@gmail.com
  ~
  -->

<LinearLayout
    style="@style/LinearLayoutVertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_weight="1">

    <FrameLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/progress_text_view"
            style="@style/Button.Narrow"
            android:layout_gravity="center|top"
            android:textAlignment="center"/>

        <ProgressBar
            android:id="@+id/progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:indeterminate="true"
            android:max="100"/>

    </FrameLayout>

    <LinearLayout
        style="@style/LinearLayoutVertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_weight="1"
        android:gravity="center|bottom">


        <include
            android:id="@+id/login_email"
            layout="@layout/login_email"
            android:gravity="center"/>

        <include
            layout="@layout/line_with_or"
            android:gravity="center"/>

        <Button
            android:id="@+id/login_button_google"
            style="@style/LoginButton"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_gravity="center|bottom"
            android:text="@string/button_login_google"/>

        <Button
            android:id="@+id/login_button_facebook"
            style="@style/LoginButton"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_gravity="center|bottom"
            android:text="@string/button_login_facebook"/>

        <Button
            android:id="@+id/login_button_twitter"
            style="@style/LoginButton"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_gravity="center|bottom"
            android:text="@string/button_login_twitter"/>

    </LinearLayout>
</LinearLayout>